--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(projeto C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(projeto main.c)
+add_executable(projeto main.c
+        projeto.c
+        projeto.h)
